2008-01-24  Glenn Morris  <rgm@gnu.org>

	* t-mouse.el (gpm-mouse-start): Declare as a function.

2008-01-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-remote-process-environment): Set "LC_ALL=C".
	(tramp-end-of-output): Add `tramp-rsh-end-of-line' into the regexp.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Don't send `tramp-rsh-end-of-line' additionally, when setting the
	prompt.
	(tramp-wait-for-output): Distinguish different prompt formats.
	(tramp-get-test-nt-command): Don't check for "\n" in the prompt.
	(tramp-local-host-p): Check whether temp directory is writable.

2008-01-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Add TODO items.

2008-01-23  Carsten Dominik  <dominik@science.uva.nl>

	* replace.el (occur-mode-find-occurrence-hook): New hook that can
	be used to reveal or highlight the location of a match.
	(occur-mode-goto-occurrence)
	(occur-mode-goto-occurrence-other-window)
	(occur-mode-display-occurrence): Run `occur-mode-find-occurrence-hook'.

2008-01-23  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/hideif.el (hide-ifdef-shadow): Add version number
	for defcustom.
	(hide-ifdef-shadow): Add version number for defface.

2008-01-23  Glenn Morris  <rgm@gnu.org>

	* textmodes/org.el (org-export-latex-cleaned-string): Fix declaration.

2008-01-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/sh-script.el (sh-basic-offset):
	* progmodes/cc-vars.el (c-syntactic-indentation)
	(c-syntactic-indentation-in-macros): Mark as safe.

2008-01-23  Richard Stallman  <rms@gnu.org>

	* icomplete.el (icomplete-get-keys):
	Look up KEYS using all maps in proper buffer.

2008-01-23  Juanma Barranquero  <lekktu@gmail.com>

	* frame.el (display-mm-height, display-mm-width):
	* whitespace.el (whitespace-check-leading-whitespace)
	(whitespace-check-trailing-whitespace)
	(whitespace-check-spacetab-whitespace)
	(whitespace-check-indent-whitespace)
	(whitespace-check-ateol-whitespace):